--- a/thank-you.html
+++ b/thank-you.html
@@ -59,7 +59,7 @@
         <img src="static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
       </div>
       <div class="d-flex text-center hero-heading__thank-you">
-        <span>Success! Your form has been submitted <br> Thank you </span>
+        <span>Thank you for reaching out! I will get back to you as soon as possible </span>
       </div>
     </div>
   </header>
